# shore-memory

./: .dockerignore  .env.docker  .env.example  .eslintignore  .eslintrc.js  .gitignore  .npmrc  .prettierrc.js  3D_ENGINE_REFACTOR_PLAN.md  CLEANUP_TODO.md  COMMENT_TRANSLATION_STANDARDS.md  Cargo.toml  DOCKER_PLAN.md  Dockerfile  README.md  REFACTORING_3D_ENGINE.md  SECURITY.md  backend_api_standardization_analysis.md  backend_api_standardization_checklist.md  backend_api_standardization_rules_baseline.md  build-win.bat  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyrightconfig.json  start-win.bat  stop-win.bat  tailwind.config.js  trivium_result_vs_codebase_next_steps.md  tsconfig.json  vite.config.js  vitest.config.ts
backend/: __init__.py  database.py  main.py  models.py  nit_settings.json  pyproject.toml  requirements-server.txt  requirements.txt  retrieval_params.json  schemas.py
backend/core/: asset_registry.py  bootstrap.py  component_container.py  config_manager.py  event_bus.py  interfaces.py  mod_manager.py  model_manager.py  nit_manager.py  path_resolver.py  plugin_manager.py  sandbox_manager.py
backend/interfaces/: core.py  memory.py
backend/models/AuraVision/: __init__.py  dataset.py  model.py  trainer.py
backend/mods/: README.md
backend/mods/_external_plugins/: __init__.py  router.py  service.py
backend/mods/memory_tagger/: hooks.py  main.py  mod.toml  processors.py
backend/nit_core/: bridge.py  dispatcher.py  security.py
backend/nit_core/interpreter/: __init__.py  ast_nodes.py  engine.py  errors.py  lexer.py  parser.py  runtime.py  test_interpreter.py
backend/nit_core/interpreter/rust_binding/: Cargo.toml  NIT_RUST_MIGRATION_RFC.md  pyproject.toml
backend/nit_core/nit_terminal_auditor/: Cargo.toml
backend/nit_core/plugins/: README.md  __init__.py
backend/nit_core/plugins/AnimeFinder/: anime_finder.py  description.json  schema.json
backend/nit_core/plugins/BilibiliFetch/: bilibili_fetch.py  description.json  schema.json
backend/nit_core/plugins/Scheduler/: scheduler_ops.py
backend/nit_core/plugins/social_adapter/: __init__.py  database.py  description.json  models.py  models_db.py  qq_tools.py  schema.json  session_manager.py  social_memory_service.py  social_router.py  social_service.py
backend/nit_core/tools/: __init__.py
backend/peroproto/: perolink_pb2.py  perolink_pb2.pyi  perolink_pb2_grpc.py
backend/routers/: agent_router.py  asset_router.py  chat_router.py  config_router.py  connection_router.py  group_chat_router.py  ide_router.py  ipc_router.py  maintenance_router.py  mcp_config_router.py  memory_router.py  model_router.py  nit_router.py  pet_router.py  scheduler_router.py  stronghold_router.py  sync_router.py  system_router.py  task_control_router.py  voice_router.py  ws_router.py
backend/rust_core/: Cargo.toml  README_LIB.md
backend/rust_core/src/: intent_engine.rs  lib.rs  retrieval_math.rs
backend/services/: agent_manager.py  agent_service.py  asr_service.py  audio_processor.py  aura_vision_service.py  browser_bridge_service.py  chain_service.py  companion_service.py  embedding_service.py  gateway_client.py  group_chat_service.py  llm_service.py  mcp_service.py  memory_importer.py  memory_secretary_service.py  memory_service.py  multimodal_trigger_service.py  prompt_service.py  realtime_session_manager.py  reflection_service.py  scheduler_service.py  scorer_service.py  screenshot_service.py  session_service.py  sync_service.py  task_manager.py  time_awareness_service.py  tts_service.py  vector_service.py  vector_store_service.py
backend/services/agent/: _background_tasks.py  _config_loader.py  _post_handler.py  _react_loop.py  _tool_executor.py  _tool_policy.py  agent_manager.py  agent_service.py  chain_service.py  companion_service.py  scheduler_service.py  task_manager.py
backend/services/chat/: group_chat_dispatcher.py  group_chat_service.py  stronghold_service.py
backend/services/core/: embedding_provider.py  embedding_service.py  gateway_client.py  gateway_hub.py  llm_service.py  mcp_service.py  moderation_service.py  prompt_service.py  realtime_session_manager.py  reindex_service.py  session_service.py  sync_service.py  vector_service.py  vector_store_service.py
backend/services/interaction/: browser_bridge_service.py  tts_service.py
backend/services/mdp/: __init__.py  manager.py
backend/services/memory/: memory_importer.py  memory_service.py  reflection_service.py  retrieval_enhancer.py  scorer_service.py  trivium_store.py  trivium_sync_service.py
backend/services/perception/: asr_service.py  audio_processor.py  aura_vision_service.py  multimodal_trigger_service.py  screenshot_service.py  time_awareness_service.py
backend/services/postprocessor/: __init__.py  base.py  implementations.py  manager.py
backend/services/preprocessor/: base.py  implementations.py  manager.py
backend/social_core/: Cargo.toml  pyproject.toml
backend/social_core/src/: lib.rs  simhash.rs
backend/tests/: conftest.py  test_asset_registry.py  test_integration.py  test_model_manager_mock.py  test_path_resolver.py  test_plugin_manager_mock.py
backend/tests/core/: test_event_bus.py
backend/tests/routers/: test_agent_router.py  test_config_router.py  test_history_router.py  test_memory_router.py  test_scheduler_router.py  test_task_control_router.py
backend/tests/utils/: test_workspace_utils.py
backend/tools/: diagnose_vectors.py  fix_vectors.py
backend/utils/: logging_config.py  memory_file_manager.py  model_cli.py  rich_render.py  screen_adapter.py  workspace_utils.py
backend/vision_core/: Cargo.toml  pyproject.toml
backend/vision_core/src/: lib.rs  vision_intent_memory.rs
server/: .env.example  Cargo.toml  README.md
server/src/: app.rs  config.rs  db.rs  main.rs  model_config.rs  recall_recipe.rs  trivium.rs  types.rs  worker.rs
tools/pero-encryptor/: Cargo.toml
tools/pero-encryptor/src/: main.rs
tools/pero-encryptor/ui/: package.json
worker/: .env.example  README.md  pyproject.toml  requirements.txt
worker/app/: main.py
(+468 files in other folders)
