[workspace]
members = [
    "backend/rust_core",
    "backend/nit_core/interpreter/rust_binding",
    "backend/nit_core/nit_terminal_auditor",
    "backend/nit_core/tools/work/CodeSearcher/src",
    "backend/social_core",
    "backend/vision_core",
    "tools/pero-encryptor",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
