[package]
name = "shore-memory-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "macros", "json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
moka = { version = "0.12", features = ["future"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "fs"] }
thiserror = "2.0"
anyhow = "1.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
blake3 = "1.8.2"
r2d2 = "0.8"
dotenvy = "0.15"
triviumdb = { path = "../vendor/TriviumDB" }

[dev-dependencies]
tempfile = "3.23.0"
