[project]
name = "shore-memory-worker"
version = "0.1.0"
description = "Python worker for shore-memory embeddings, scoring, and reflection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.1",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
