[package]
name = "pero_social_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pero_social_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
ahash = "0.8"
twox-hash = "1.6"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.11"


