[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pero-social-core"
version = "0.1.0"
description = "Social memory engine with SimHash and time awareness"
license = { text = "MIT" }
authors = [
    { name = "PeroCore Developer" }
]
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
module-name = "pero_social_core"
features = ["pyo3/extension-module"]
