[package]
name = "pero_vision_core"
version = "0.8.58"
edition = "2021"

[lib]
name = "pero_vision_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 内部序列化依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python 绑定
pyo3 = { version = "0.21", features = ["extension-module"] }

# Tract ONNX 推理
tract-onnx = { version = "0.21" }

# 图像处理
image = "0.24"
ndarray = "0.15"

# 并行计算
rayon = "1.8"

# 错误处理
anyhow = "1.0"

# 数据结构
ahash = "0.8"
smallvec = "1.11"
