[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pero_vision_core"
version = "0.8.51"
description = "High-performance computer vision core for Pero using Rust"
license = { text = "Apache-2.0" }
authors = [
    { name = "PeroCore Developer" }
]
requires-python = ">=3.8"
dependencies = []
keywords = ["AI", "Vision", "Rust", "ONNX"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.maturin]
module-name = "pero_vision_core"
features = ["pyo3/extension-module"]
