[package]
name = "pero-encryptor"
version = "0.3.0"
edition = "2021"

[dependencies]
# 加密 (XChaCha20-Poly1305) - 必须与核心保持一致
chacha20poly1305 = "0.10.1"

# 密钥派生 (HKDF)
hkdf = "0.12"
sha2 = "0.10"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 时间
chrono = "0.4"

# 随机数
rand = "0.8.5"

# 混淆 (字符串加密)
obfstr = "0.4"

# CLI 参数解析
clap = { version = "4.4", features = ["derive"] }

# 文件 IO
anyhow = "1.0"
hex = "0.4.3"
