[package]
name = "pero-render-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API binding for Node.js
napi = { version = "2.12.2", features = ["napi4"] }
napi-derive = "2.12.2"

# Encryption (XChaCha20-Poly1305)
chacha20poly1305 = "0.10.1"

# Key Derivation (HKDF-SHA256)
hkdf = "0.12"
sha2 = "0.10"

# JSON Parsing (High performance)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random (for nonces)
rand = "0.8.5"

# Obfuscation (String encryption)
obfstr = "0.4"

# Tar archive support (for folder packing)
tar = "0.4"

# System API (Anti-debug)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Threading"
] }

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
