[package]
name = "pero-encryptor-ui"
version = "0.1.0"
description = "Pero 模型加密工具"
authors = ["YoKONCy"]
license = "Apache-2.0"
repository = "https://github.com/YoKONCy/PeroCore.git"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pero_encryptor_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"

chacha20poly1305 = "0.10.1"
hkdf = "0.12"
sha2 = "0.10"
chrono = "0.4"
rand = "0.8.5"
obfstr = "0.4"
hex = "0.4.3"
tar = "0.4.44"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_Foundation",
    "Win32_System_Threading"
] }

[workspace]
